# chatbot

./: .env.example  .env.local  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  cloudbuild.yaml  context7_mcp_installation.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  nginx.conf  pyproject.toml  service.yaml  todo_separazione_prompt.md
.agent/rules/: chatbot.md  documentation.md  instructions.md
.clinerules/: chatbot_instructions.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: chatbot.instructions.md  documentation.instructions.md
.kilocode/rules/: chatbot-instructions.md
alembic/: env.py
alembic/versions/: 10c3d8a7f8b1_add_lifecycle_events.py  1d3eb860c333_add_is_conversation_finished_flag_to_.py  27379cc994a3_update_default_system_prompt_to_.py  7276091df076_merge_heads.py  a9347acf1bae_add_session_notes.py  ae3d7b8f9c1_add_human_tasks_table.py  baddb34d_add_batch_waiting_to_sessions.py  c2e4f7b2b3d4_add_completed_to_human_tasks.py  (+5 more)
app/: __init__.py  config.py  database.py  logger_config.py  main.py  models.py  routes.py
app/data/: __init__.py  (+3 more)
docs/: FLUSSO_END_TO_END.md  Nginx_SSL_Documentation.md  SSL_SETUP.md  conversazione_completa_test.txt  flusso_tecnico_completo.md  prima_implementazione_test.txt
scripts/: README.md  README_server.md  deploy.sh  local-dev.sh  local.sh  quick_test.sh  run_server.sh  server.sh  ssl.sh  test_complete_flow.sh  test_db_connection.py  test_flow_visualization.sh  test_lifecycle_flow.py
tests/: __init__.py  test_api_endpoints.py  test_batch_wait.py  test_e2e_coverage.py  test_lifecycle.py  test_main.py
(+23 files in other folders)
